--- a/pom.xml
+++ b/pom.xml
@@ -115,4 +115,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+    <repository>
+        <id>nexus-releases</id>
+        <name>Nexus Release Repository</name>
+        <url>http://15.206.74.96:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <name>Nexus Snapshot Repository</name>
+        <url>http://15.206.74.96:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
+
 </project>
